# SGUSCHI

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  todonote.md
Test/: POSCAR_ZrCN_NoGas  POSCAR_ZrCN_O2Placed  POSCAR_ZrCN_Swapped
example/: CovalentRadii  INCAR  KPOINTS  OxParams  OxidationMaster  POSCAR  POTCAR  job.in  jobsub  note.md
src/: SGUSCHI.py
src/Test/: POSCAR_ZrCN_Vacuum
src/dependencies/SLUSCHI_mod/: .volsearch.swp  AdjustBMIX  AdjustNBANDS  AdjustPOTIM  Converge  DetermineSize.f90  OxidationAnalysis.py  OxidationStep.py  POSCAR  PressureAvg.f90  PressurePulay  SLUSCHI  UpdateINCAR  VaspIO.py  makefile  meltcoex  volsearch  volsearch_cont  volsearch_cont_LongWT_gam
src/postprocessing/workflow/: CalculatePartialPressure.py  CompareMethodsCumulative.py
src/preprocessing/: OxidationPreprocessing.py  WorkSpaceSetup.py
src/test/: 1273_3Trimmed.xyz  RunTests.py  TestGasWorkflow.py  TestOxidationStep.py  TestPreprocessing.py  TestPressureAvg.py  TestRestartSimulation.py  TestShellFailFastGuards.py  TestSimulationSummary.py  TestStatusLog.py  TestTimeToPoscar.py  TestVaspioIo.py  conftest.py
src/test/fixtures/: 1273_3TimeAddedFrames.xyz  1273_3ZrCnFrames.xyz
src/utils/: BindApptainerToSlurm.sh  FixRateAnalysis.py  FixXYZ.py  FolderUtils.py  OxiMasterFailFast.sbatch  RestartSimulation.py  RollbackTrajectory.py  SimulationSummary.py  StatusLog.py  TestOxidationStep.py  TestWorkflow.py
src/workflow/: OxidationAnalysis.py  OxidationStep.py  VaspIO.py
